# barndoor-python-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  dump_sdk_files.py  env.example  pyproject.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE
.github/chainguard/: org-actions-read.sts.yaml  platform-publish.sts.yaml
.github/workflows/: ci.yml  main.yml  release.yml
barndoor/proto/policy/v1/: policy_pb2.py  policy_pb2_grpc.py
barndoor/proto/policy/v2/: policy_pb2.py  policy_pb2_grpc.py
barndoor/proto/registry/v1/: registry_pb2.py  registry_pb2_grpc.py
barndoor/sdk/: __init__.py  _http.py  auth.py  auth_store.py  cli_login.py  client.py  config.py  exceptions.py  logging.py  models.py  quickstart.py  utils.py  validation.py
barndoor/sdk/docs/: openapi.yaml
examples/: sample_notion_agent.py  sample_pipeline_report_agent.py  sample_salesforce_agent.py  sample_salesforce_langchain_agent.py  sample_salesforce_llamaindex_agent.py  web_app_auth.py
tests/: __init__.py  conftest.py  test_auth_store.py  test_client.py  test_config.py  test_exceptions.py  test_http_client.py  test_pagination.py  test_proxy_url.py  test_quickstart.py  test_validation.py
